Sam Jan 18 11:28:57 2003  Till Adam  <till@adam-lilienthal.de>

  * initial import